--- a/styles.css
+++ b/styles.css
@@ -52,10 +52,24 @@ main {
     padding: 60px
 }
 
+.games-banner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px
+}
+
 .game-item {
-    height: 500px;
+    height: 200px;
     margin-right: 50px;
     margin-left: 50px;
+    border-radius: 30px;
+}
+
+.game-banner {
+    height: 500px;
+    margin-right: 0px;
+    margin-left: 0px;
     border-radius: 30px;
 }
 
@@ -78,7 +92,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 60px;
+    padding: 20px;
 }
 
 .itch-game{
