--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@ main {
     justify-content: center;
     align-items: center;
     padding: 0px
+    width: 100%;
 }
 
 .game-item {
@@ -67,6 +68,7 @@ main {
 }
 
 .game-banner {
+    width: 100%;
     height: 500px;
     margin-right: 0px;
     margin-left: 0px;
@@ -194,7 +196,6 @@ main {
   top: 0;
   bottom: 0;
   width: 100%;
-  height: 100%; 
   overflow: hidden;
 }
 
