--- a/styles.css
+++ b/styles.css
@@ -1,207 +1,11 @@
-/* Style the header with a grey background and some padding */
-* {
-    margin: 0px;
-    padding: 0px;
-    font-family: sans-serif;
-}
+.carousel-item img {
+    object-fit: cover; /* Do not scale the image */
+    object-position: center; /* Center the image within the element */
+    max-height: 80vh;
+    min-height: 80vh;
+  }
 
-a {
-    color: white;
-    text-decoration: none;
-}
-
-body {
-    background: #252525;
-}
-
-.logo {
-    height: 30px;
-}
-
-nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background: #202020;
-    height: 8vh;
-}
-
-main {
-    background: url("games.mp4" no-repeat)
-		center center;
-    background-size: cover;
-    height: 92vh;
-}
-
-.nav-list {
-    list-style: none;
-    display: flex;
-}
-
-.nav-list li {
-    letter-spacing: 3px;
-    margin-left: 32px;
-}
-
-/* NAVBAR AND HEADER CSS END*/
-
-.games-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 60px
-}
-
-.games-banner {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0px
-    width: 100%;
-}
-
-.game-item {
-    height: 200px;
-    margin-right: 50px;
-    margin-left: 50px;
-    border-radius: 30px;
-}
-
-.game-banner {
-    width: 100%;
-    height: 500px;
-    margin-right: 0px;
-    margin-left: 0px;
-    border-radius: 30px;
-}
-
-#center {
-    display: flex;
-    justify-content: center;
-    padding: 100px;
-    color: #DDD;
-}
-
-.text-index {
-    text-align: center;
-    font-size: 30px;
-    inline-size: 1000px;
-}
-
-/* GAMES LIST*/
-
-.game-out {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}
-
-.itch-game{
-    margin-right: 50px;
-    margin-left: 50px;
-    border-radius: 30px;
-}
-
-/* ABOUT CONTENT*/
-
-.about {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 100px;
-    background: #DDD;
-    overflow: hidden;
-}
-
-.logo-about {
-    height: 100px;
-    margin-right: 50px;
-    margin-left: 50px;
-}
-
-.text-about {
-    text-decoration: none;
-    font-size: 30px;
-    inline-size: 700px;
-    overflow: hidden;
-    margin-right: 50px;
-    margin-left: 50px;
-}
-
-.team-title {
-    color: #DDD;
-    text-align: center;
-    margin-top: 80px;
-    margin-bottom: 40px;
-}
-
-.team {
-    display: flex;
-    justify-content: center;
-}
-
-.member {
-    display: block;
-    margin: 100px;
-    margin-top: 50px;
-    margin-bottom:50px;
-}
-
-.pro-pic {
-    height: 300px;
-    border-radius: 30px;
-}
-
-.name {
-    text-align: center;
-    padding-bottom: 20px;
-}
-
-.description {
-    text-align: center;
-    inline-size: 300px;
-    overflow: hidden;
-    padding-bottom: 30px;
-}
-
-.team * {
-    color: #DDD;
-}
-
-/* FOOTER */
-
-#footer-content {
-    layout: blocks;
-    background: black;
-    padding: 40px;
-    color: white;
-}
-
-.footer-text {
-    text-align: center;
-    font-size: 40px;
-}
-
-.email-text {
-    text-align: center;
-    font-size: 20px;
-}
-
-.copyright {
-    text-align: right;
-}
-
-.video-container {
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  overflow: hidden;
-}
-
-  /* Center the video */
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-}
+.carousel {
+    height: 80vh;
+    min-height: 80vh;
 }
